# f3dviewer

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md  options.md
src/: CMakeLists.txt  F3DWidget.cpp  F3DWidget.h  F3DWindow.cpp  F3DWindow.h  f3dviewer.cpp  f3dviewer.h  main.cpp  sidebarwnd.cpp  sidebarwnd.h  sidebarwnd.ui  test.cpp
src/f3dwidget/: F3DPathWorkaround.cpp  F3DPathWorkaround.h  F3DPathWorkaround_test.cpp  F3DWidget.cpp  F3DWidget.h
viewer/: CMakeLists.txt  F3DViewer.json  f3dviewer.cpp  f3dviewer.h  sidebarwnd.cpp  sidebarwnd.h  sidebarwnd.ui  test.cpp
